fixed code snippets and links

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
         <nav class="display-align-center display-justify-space-between">
             <div class="heading display-align-center">
                 <img src="Assets/images/logo.png" alt="logo" class="logo-nav">
-           <h1 class="title">mondayblues</h1>
+                <h1 class="title">mondayblues</h1>
             </div>
             <div class="navbar ">
-                <button class="nav-btn solid-secondary"><a href="https://github.com/anushasunil/mondayBlues">gitHub</a> </button>
-                <button class="nav-btn solid-primary"><a href="/Stylesheets/Docs/introduction/introduction.html">Docs</a></button>
+                <button class="nav-btn solid-secondary"><a href="https://github.com/anushasunil/mondayBlues">gitHub</a>
+                </button>
+                <button class="nav-btn solid-primary"><a
+                        href="/Stylesheets/Docs/introduction/introduction.html">Docs</a></button>
             </div>
         </nav>
         <div class="main-container">
@@ -29,17 +31,21 @@
                 </div>
                 <h1>mondayblues</h1>
             </div>
-            <h5 class="text-align-center secondary-heading">A basic component library that will help you build beautiful websites</h5>
-            <p class="text-align-center tertiary-heading">Import the below <span class="highlight semi-bold">.css</span> in your project and get started with our
+            <h5 class="text-align-center secondary-heading">A basic component library that will help you build beautiful
+                websites</h5>
+            <p class="text-align-center tertiary-heading">Import the below <span class="highlight semi-bold">.css</span>
+                in your project and get started with our
                 components!</p>
-            <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28250%2C248%2C242%2C1%29&t=night-owl&wt=none&l=css&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2540import%2520url%28Stylesheets%252Fmain.css%29%253B%250A"
-                style="width: 650px; height: 226px; border:0; transform: scale(1); overflow:hidden;"
+                <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%28250%2C248%2C242%2C1%29&t=night-owl&wt=none&l=css&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2540import%2520url%28https%253A%252F%252Fmondayblues.netlify.app%252Fstylesheets%252Fmain.css%29%253B%250A"
+                style="width: 789px; height: 226px; border:0; transform: scale(1); overflow:hidden;"
                 sandbox="allow-scripts allow-same-origin">
-            </iframe>
+              </iframe>
             <div class="actions display-justify-center">
                 <button class="solid-primary">
-                    <a href="/Stylesheets/Docs/introduction/introduction.html"><p>Get Started</p></a>
+                    <a href="/Stylesheets/Docs/introduction/introduction.html">
+                        <p>Get Started</p>
+                    </a>
                 </button>
                 <button class="solid-secondary">
                     <p><a href="https://github.com/anushasunil/mondayBlues">gitHub</a></p>
