--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="navbar">
                 <button class="nav-btn solid-secondary"><a href="https://github.com/anushasunil/mondayblues">gitHub</a> </button>
-                <button class="nav-btn solid-primary"><a href="/index.html">Home</a></button>
+                <button class="nav-btn solid-primary"><a href="/Stylesheets/Docs/introduction/introduction.html">Docs</a></button>
             </div>
         </nav>
         <div class="main-container">
